Add, delete and show notes done

--- a/NotesApp/NotesApp.csproj
+++ b/NotesApp/NotesApp.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Templates\AddNoteTemp.xaml">
+    <EmbeddedResource Update="NotesTemplate.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
